--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,13 +1,22 @@
-name: ci
+name: Integration Tests
 on:
- issue_comment:
-    types: [created, edited, deleted]
+  issue_comment:
+    types:
+      - created
+      - edited
+
 jobs:
-  build:
+  integration_tests:
+    name: Run integration tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-
+      - name: Pull Request Comment Trigger
+        uses: Khan/pull-request-comment-trigger@1.0.0
+        id: check
+        with:
+          trigger: '/test'
+          reaction: 'eyes'
+        env:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+      - name: Checkout repo
+        uses: actions/checkout@v3
